--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -24,6 +24,7 @@ env:
   REGISTRY: "ghcr.io"
   ORGANISATION: ${{ github.repository_owner }}
   REPOSITORY: ${{ github.event.repository.name }}
+  BINARY_NAME: fleet
 
 # =============================================================================
 # JOBS
@@ -77,13 +78,13 @@ jobs:
             mkdir -p ./artifacts
             arch0=${architectures[0]}
             arch1=${architectures[1]}
-            lipo -create ./build_target/fleet-${arch0} ./build_target/fleet-${arch1} -output ./artifacts/fleet
-            lipo -info ./artifacts/fleet
+            lipo -create ./build_target/fleet-${arch0} ./build_target/fleet-${arch1} -output ./artifacts/${{ env.BINARY_NAME }}
+            lipo -info ./artifacts/${{ env.BINARY_NAME }}
             ls -la ./artifacts
             rm -rf ./build_target
           elif [[ "${{ matrix.os }}" == "windows-latest" ]]; then
             mkdir -p ./artifacts
-            env GOARCH=${{ matrix.go_arch }} go build -o ./artifacts/fleet.exe ./orbit/cmd/orbit
+            env GOARCH=${{ matrix.go_arch }} go build -o ./artifacts/${{ env.BINARY_NAME }}.exe ./orbit/cmd/orbit
             ls -la ./artifacts
           fi
 
@@ -97,7 +98,7 @@ jobs:
           apple_id_username: ${{ secrets.APPLE_ID_USERNAME }}
           apple_id_password: ${{ secrets.APPLE_ID_PASSWORD }}
           apple_team_id: ${{ secrets.APPLE_TEAM_ID }}
-          binary_name: fleet
+          binary_name: ${{ env.BINARY_NAME }}
 
       - name: Upload client artifact
         uses: actions/upload-artifact@v4
