--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -10,7 +10,7 @@ permissions:
 
 on:
   push:
-    branches: [main]
+    branches: [main, feature/add-release-steps]
     paths-ignore:
       - "**/*.md"
   workflow_dispatch:
@@ -51,7 +51,6 @@ jobs:
             go_os: windows
             go_arch: amd64
             artifact_name: fleet-windows-amd64
-         
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -65,28 +64,35 @@ jobs:
 
       - name: Compile agent for ${{ matrix.go_os }}
         run: |
-          if [[ "${{ matrix.os }}" == "macos-latest" ]]; then
-            rm -rf ./build_target
-            mkdir -p ./build_target
+          if [[ "${{ matrix.go_os }}" == "darwin" ]]; then
             architectures=($(echo '${{ toJSON(matrix.go_arch) }}' | jq -r '.[]'))
             for arch in "${architectures[@]}"; do
               echo "Building for ${{ matrix.go_os }}/${arch}"
-              env GOARCH=${arch} go build -o ./build_target/fleet-${arch} ./orbit/cmd/orbit
+              env GOARCH=${arch} go build -o ./fleet-${arch} ./orbit/cmd/orbit
             done
-            ls -la ./build_target
-            echo "Create ${{ matrix.artifact_name }}"
-            mkdir -p ./artifacts
-            arch0=${architectures[0]}
-            arch1=${architectures[1]}
-            lipo -create ./build_target/fleet-${arch0} ./build_target/fleet-${arch1} -output ./artifacts/${{ env.BINARY_NAME }}
-            lipo -info ./artifacts/${{ env.BINARY_NAME }}
-            ls -la ./artifacts
-            rm -rf ./build_target
           elif [[ "${{ matrix.os }}" == "windows-latest" ]]; then
             mkdir -p ./artifacts
             env GOARCH=${{ matrix.go_arch }} go build -o ./artifacts/${{ env.BINARY_NAME }}.exe ./orbit/cmd/orbit
             ls -la ./artifacts
+          else
+            echo "Unsupported OS: ${{ runner.os }}"
+            exit 1
           fi
+
+      - name: Create macOS universal package
+        if: "runner.os == 'macOS'"
+        shell: bash
+        run: |
+          echo "Create ${{ matrix.artifact_name }}"
+          mkdir -p artifacts
+          architectures=($(echo '${{ toJSON(matrix.go_arch) }}' | jq -r '.[]'))
+          arch0=${architectures[0]}
+          arch1=${architectures[1]}
+          lipo -create ./fleet-${arch0} ./fleet-${arch1} -output "./artifacts/${{ env.BINARY_NAME }}"
+          
+          echo "Verify macOS universal package"
+          lipo -info "./artifacts/${{ env.BINARY_NAME }}"
+          file "./artifacts/${{ env.BINARY_NAME }}"
 
       - name: Sign MacOS package
         if: runner.os == 'macOS'
