--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -55,12 +55,7 @@ jobs:
           - os: windows-latest
             go_os: windows
             go_arch: amd64
-            artifact_name: fleet-windows-amd64.exe
-          # - os: windows-latest
-          #   go_os: windows
-          #   go_arch: 386
-          #   artifact_name: fleet-windows-i386.exe
-         
+            artifact_name: fleet-windows-amd64.exe         
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -74,37 +69,17 @@ jobs:
 
       - name: Compile agent for ${{ matrix.go_os }}
         run: |
-          if [[ "${{ matrix.os }}" == "macos-latest" ]]; then
-            rm -rf ./build_target
-            mkdir -p ./build_target
+          if [[ "${{ matrix.go_os }}" == "darwin" ]]; then
             architectures=($(echo '${{ toJSON(matrix.go_arch) }}' | jq -r '.[]'))
             for arch in "${architectures[@]}"; do
               echo "Building for ${{ matrix.go_os }}/${arch}"
-              env GOARCH=${arch} go build -o ./build_target/orbit-mac-${arch} ./orbit/cmd/orbit
+              env GOARCH=${arch} go build -o ./fleet-${arch} ./orbit/cmd/orbit
             done
-            ls -la ./build_target
-            echo "Create ${{ matrix.artifact_name }}"
-            mkdir -p ./artifacts
-            arch0=${architectures[0]}
-            arch1=${architectures[1]}
-            lipo -create ./build_target/orbit-mac-${arch0} ./build_target/orbit-mac-${arch1} -output ./artifacts/${{ env.BINARY_NAME }}
-            lipo -info ./artifacts/${{ env.BINARY_NAME }}
-            ls -la ./artifacts
-            rm -rf ./build_target
           elif [[ "${{ matrix.os }}" == "windows-latest" ]]; then
             mkdir -p ./artifacts
             env GOARCH=${{ matrix.go_arch }} go build -o ./artifacts/${{ env.BINARY_NAME }}.exe ./orbit/cmd/orbit
             ls -la ./artifacts
+          else
+            echo "Unsupported OS: ${{ runner.os }}"
+            exit 1
           fi
-
-      - name: Sign MacOS package
-        if: runner.os == 'macOS'
-        uses: ./.github/steps/sign-macos-package
-        with:
-          apple_certificate_p12: ${{ secrets.APPLE_CERTIFICATE_P12 }}
-          apple_certificate_password: ${{ secrets.APPLE_CERTIFICATE_PASSWORD }}
-          apple_developer_id: ${{ secrets.APPLE_DEVELOPER_ID }}
-          apple_id_username: ${{ secrets.APPLE_ID_USERNAME }}
-          apple_id_password: ${{ secrets.APPLE_ID_PASSWORD }}
-          apple_team_id: ${{ secrets.APPLE_TEAM_ID }}
-          binary_name: ${{ env.BINARY_NAME }}
