--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -10,7 +10,7 @@ permissions:
 
 on:
   push:
-    branches: [main]
+    branches: [main,feature/cleanup]
     paths-ignore:
       - "**/*.md"
   workflow_dispatch:
