--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -135,25 +135,17 @@ jobs:
       - name: Prepare release artifacts
         run: |
           set -e
-          ls -lR release-artifacts
-          ls -lR release-artifacts/fleet-mac-universal
-          ls -lR release-artifacts/fleet-windows-amd64
           mkdir -p final-artifacts/clients
 
           # macOS
           if [ -d "release-artifacts/fleet-mac-universal" ]; then
-            cp "release-artifacts/fleet-mac-universal/fleet" "final-artifacts/clients/fleet-macos-universal"
             tar -czf "final-artifacts/clients/fleet-macos-universal.tar.gz" \
-              -C "final-artifacts/clients" fleet-macos-universal
-            rm "final-artifacts/clients/fleet-macos-universal"
+              -C "release-artifacts/fleet-mac-universal" fleet
           fi
-
           # Windows
           if [ -d "release-artifacts/fleet-windows-amd64" ]; then
-            cp "release-artifacts/fleet-windows-amd64/fleet.exe" "final-artifacts/clients/fleet-windows-amd64.exe"
-            (cd "final-artifacts/clients" && \
-              zip "fleet-windows-amd64.zip" fleet-windows-amd64.exe)
-            rm "final-artifacts/clients/fleet-windows-amd64.exe"
+            (cd "release-artifacts/fleet-windows-amd64" && \
+              zip "${GITHUB_WORKSPACE}/final-artifacts/clients/fleet-windows-amd64.zip" fleet.exe)
           fi
 
           ls -lh final-artifacts/clients/
