--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -6,7 +6,7 @@ permissions:
 
 on:
   push:
-    branches: [main]
+    branches: [main, feature/build-migration]
     paths:
       - 'openframe/**'
       - '.github/workflows/docker.yml'
