--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -72,20 +72,6 @@ jobs:
       - name: Install JS Dependencies
         run: make deps-js
 
-      - name: Install macOS signing tools
-        run: |
-          pushd /tmp
-          readonly version="0.27.0"
-          readonly codesign_package="apple-codesign-${version}-x86_64-unknown-linux-musl.tar.gz"
-          curl -O -L "https://github.com/indygreg/apple-platform-rs/releases/download/apple-codesign%2F${version}/${codesign_package}"
-          curl -O -L "https://github.com/indygreg/apple-platform-rs/releases/download/apple-codesign%2F${version}/${codesign_package}.sha256"
-          echo "$(cat $codesign_package.sha256)  $codesign_package" | sha256sum --quiet --strict --check -
-          tar --extract --strip-components 1 --file "$codesign_package"
-          mkdir -p $HOME/.bin
-          mv rcodesign $HOME/.bin/
-          echo "$HOME/.bin" >> $GITHUB_PATH
-          popd
-
       - name: Create release tag
         run: |
           git config user.name github-actions
@@ -102,11 +88,6 @@ jobs:
         env:
           GORELEASER_KEY: ${{ secrets.GORELEASER_KEY }}
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          APPLE_APPLICATION_CERTIFICATE: ${{ secrets.APPLE_APPLICATION_CERTIFICATE }}
-          APPLE_APPLICATION_CERTIFICATE_PASSWORD: ${{ secrets.APPLE_APPLICATION_CERTIFICATE_PASSWORD }}
-          APPLE_APP_STORE_CONNECT_KEY: ${{ secrets.APPLE_APP_STORE_CONNECT_KEY }}
-          APPLE_APP_STORE_CONNECT_KEY_ID: ${{ secrets.APPLE_APP_STORE_CONNECT_KEY_ID }}
-          APPLE_APP_STORE_CONNECT_ISSUER_ID: ${{ secrets.APPLE_APP_STORE_CONNECT_ISSUER_ID }}
 
       - name: Attest binaries and archives
         uses: actions/attest-build-provenance@v2
@@ -123,6 +104,52 @@ jobs:
             dist/*.zip
             dist/checksums.txt
           if-no-files-found: warn
+          retention-days: 30
+
+      - name: Upload fleetctl macOS binary for signing
+        uses: actions/upload-artifact@v4
+        with:
+          name: fleetctl-macos-unsigned
+          path: dist/fleetctl-macos_darwin_all/fleetctl
+          if-no-files-found: error
+          retention-days: 1
+
+  # ---------------------------------------------------------------------------
+  # Sign fleetctl macOS binary
+  # ---------------------------------------------------------------------------
+  sign_fleetctl:
+    name: "Sign fleetctl (macOS)"
+    needs: [goreleaser]
+    runs-on: macos-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+        with:
+          fetch-depth: 1
+
+      - name: Download unsigned fleetctl
+        uses: actions/download-artifact@v4
+        with:
+          name: fleetctl-macos-unsigned
+          path: artifacts
+
+      - name: Sign macOS binary
+        uses: ./.github/steps/sign-macos-package
+        with:
+          apple_certificate_p12: ${{ secrets.APPLE_CERTIFICATE_P12 }}
+          apple_certificate_password: ${{ secrets.APPLE_CERTIFICATE_PASSWORD }}
+          apple_developer_id: ${{ secrets.APPLE_DEVELOPER_ID }}
+          apple_id_username: ${{ secrets.APPLE_ID_USERNAME }}
+          apple_id_password: ${{ secrets.APPLE_ID_PASSWORD }}
+          apple_team_id: ${{ secrets.APPLE_TEAM_ID }}
+          binary_name: fleetctl
+
+      - name: Upload signed fleetctl
+        uses: actions/upload-artifact@v4
+        with:
+          name: fleetctl-macos-signed
+          path: artifacts/fleetctl
+          if-no-files-found: error
           retention-days: 30
 
   # ---------------------------------------------------------------------------
@@ -203,11 +230,89 @@ jobs:
           compression-level: 9
 
   # ---------------------------------------------------------------------------
+  # Build and Push Docker Images with buildx
+  # ---------------------------------------------------------------------------
+  docker_buildx:
+    name: "Docker Build (${{ matrix.image }})"
+    needs: [goreleaser]
+    runs-on: ubuntu-latest
+    strategy:
+      fail-fast: false
+      matrix:
+        include:
+          - image: fleet
+            dockerfile: tools/fleet-docker/Dockerfile
+            context: .
+          - image: fleetctl
+            dockerfile: tools/fleetctl-docker/Dockerfile
+            context: .
+            build_args: |
+              binpath=fleetctl
+
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+        with:
+          fetch-depth: 1
+
+      - name: Download GoReleaser artifacts
+        uses: actions/download-artifact@v4
+        with:
+          name: goreleaser-artifacts
+          path: dist
+
+      - name: Extract binaries for Docker build
+        run: |
+          # Extract fleet binary
+          if [[ "${{ matrix.image }}" == "fleet" ]]; then
+            tar -xzf dist/fleet_v*_linux.tar.gz -C . --strip-components=1
+            ls -la fleet
+          fi
+          # Extract fleetctl binary
+          if [[ "${{ matrix.image }}" == "fleetctl" ]]; then
+            tar -xzf dist/fleetctl_v*_linux_amd64.tar.gz -C . --strip-components=1
+            ls -la fleetctl
+          fi
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+
+      - name: Login to GHCR
+        uses: docker/login-action@v3
+        with:
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Extract version for tags
+        id: version
+        run: |
+          VERSION="${{ inputs.version }}"
+          # Remove 'v' prefix if present for major version
+          VERSION_NUM="${VERSION#v}"
+          MAJOR=$(echo "$VERSION_NUM" | cut -d. -f1)
+          echo "tag=${VERSION}" >> $GITHUB_OUTPUT
+          echo "major=v${MAJOR}" >> $GITHUB_OUTPUT
+
+      - name: Build and push
+        uses: docker/build-push-action@v6
+        with:
+          context: ${{ matrix.context }}
+          file: ${{ matrix.dockerfile }}
+          push: true
+          build-args: ${{ matrix.build_args }}
+          tags: |
+            ghcr.io/${{ env.ORGANISATION }}/${{ matrix.image }}:${{ steps.version.outputs.tag }}
+            ghcr.io/${{ env.ORGANISATION }}/${{ matrix.image }}:${{ steps.version.outputs.major }}
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
+
+  # ---------------------------------------------------------------------------
   # Create GitHub Release
   # ---------------------------------------------------------------------------
   release:
     name: "Create Release"
-    needs: [goreleaser, build_client]
+    needs: [goreleaser, sign_fleetctl, build_client, docker_buildx]
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
@@ -230,6 +335,29 @@ jobs:
             cp release-artifacts/goreleaser-artifacts/*.tar.gz final-artifacts/server/ 2>/dev/null || true
             cp release-artifacts/goreleaser-artifacts/*.zip final-artifacts/server/ 2>/dev/null || true
             cp release-artifacts/goreleaser-artifacts/checksums.txt final-artifacts/server/ 2>/dev/null || true
+          fi
+
+          # Replace unsigned fleetctl macOS with signed version
+          if [ -d "release-artifacts/fleetctl-macos-signed" ]; then
+            # Find the unsigned macOS archive and get its name
+            MACOS_ARCHIVE=$(ls final-artifacts/server/fleetctl_v*_macos.tar.gz 2>/dev/null | head -1)
+            if [ -n "$MACOS_ARCHIVE" ]; then
+              echo "Replacing unsigned fleetctl macOS archive with signed version"
+              rm -f "$MACOS_ARCHIVE"
+              # Create new archive with signed binary
+              ARCHIVE_NAME=$(basename "$MACOS_ARCHIVE")
+              mkdir -p tmp-fleetctl
+              cp release-artifacts/fleetctl-macos-signed/fleetctl tmp-fleetctl/
+              tar -czf "final-artifacts/server/${ARCHIVE_NAME}" -C tmp-fleetctl fleetctl
+              rm -rf tmp-fleetctl
+              # Update checksums
+              if [ -f "final-artifacts/server/checksums.txt" ]; then
+                # Remove old fleetctl macOS checksum and add new one
+                grep -v "fleetctl_v.*_macos.tar.gz" final-artifacts/server/checksums.txt > final-artifacts/server/checksums.tmp || true
+                (cd final-artifacts/server && sha256sum "${ARCHIVE_NAME}" >> checksums.tmp)
+                mv final-artifacts/server/checksums.tmp final-artifacts/server/checksums.txt
+              fi
+            fi
           fi
 
           # macOS Orbit client
